--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
     }
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "electron-compile": "^6.4.4",
     "electron-devtools-installer": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "jquery": "^1.9.1",
+    "react": "^16.8.2",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-dom": "^16.8.2",
     "react-hot-loader": "^3.0.0-beta.6"
   },
   "devDependencies": {
