--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "chart.js": "^1.1.1",
     "d3": "^5.9.1",
     "electron-compile": "^6.4.4",
     "electron-devtools-installer": "^2.1.0",
@@ -55,8 +56,10 @@
     "jquery": "^1.9.1",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.8.2",
-    "react-hot-loader": "^3.0.0-beta.6"
+    "react-hot-loader": "^3.0.0-beta.6",
+    "react-vis": "^1.11.6"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
